--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^1.18.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "transliteration": "^2.1.7",
     "vue-template-compiler": "^2.6.10"
   }
 }
